# winforge-framework

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/winforge-cli/: Cargo.toml
crates/winforge-cli/src/: main.rs
crates/winforge-cli/src/commands/: build.rs  host.rs  mod.rs  new.rs  plugin.rs  run.rs  workflow.rs
crates/winforge-cli/src/scaffold/: mod.rs  templates.rs
crates/winforge-core/: Cargo.toml
crates/winforge-core/src/: error.rs  lib.rs
crates/winforge-core/src/actors/: actor.rs  context.rs  handle.rs  mod.rs  system.rs
crates/winforge-core/src/events/: bus.rs  mod.rs
crates/winforge-core/src/ipc/: framing.rs  mod.rs  pipe.rs  pipe_stub.rs  pipe_windows.rs
crates/winforge-core/src/plugins/: capability.rs  loader.rs  manifest.rs  mod.rs  registry.rs
crates/winforge-host/: Cargo.toml
crates/winforge-host/src/: bridge.rs  lib.rs  protocol.rs  runtime.rs
crates/winforge-plugin/: Cargo.toml
crates/winforge-plugin/src/: abi.rs  lib.rs
crates/winforge-workflow/: Cargo.toml
crates/winforge-workflow/src/: definition.rs  engine.rs  error.rs  instance.rs  lib.rs  step.rs
examples/basic-workflow/: onboard-employee.workflow.yaml
examples/hello-plugin/: Cargo.toml  plugin.toml
examples/hello-plugin/src/: lib.rs
ui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WinForgeShell.csproj  WinForgeShell.sln  app.manifest
ui/Services/: IpcMessage.cs  IpcService.cs
ui/ViewModels/: MainViewModel.cs  PluginsViewModel.cs  WorkflowsViewModel.cs
ui/Views/: EventsPage.xaml  EventsPage.xaml.cs  PluginsPage.xaml  PluginsPage.xaml.cs  WorkflowsPage.xaml  WorkflowsPage.xaml.cs
