[workspace]
members = [
    "crates/winforge-core",
    "crates/winforge-cli",
    "crates/winforge-plugin",
    "crates/winforge-workflow",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Andrew Rester and WinForge Contributors"]
license = "MIT"
repository = "https://github.com/ar-fullsend/winforge-framework"
homepage = "https://github.com/ar-fullsend/winforge-framework"
keywords = ["windows", "framework", "plugin", "actor", "workflow"]
categories = ["os::windows-apis", "asynchronous", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "color", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dashmap = "6"
once_cell = "1"

# Internal crates
winforge-core = { path = "crates/winforge-core" }
winforge-plugin = { path = "crates/winforge-plugin" }
winforge-workflow = { path = "crates/winforge-workflow" }
