[package]
name = "winforge-core"
description = "Core runtime for the WinForge framework — actor model, event bus, and plugin system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific interop — only pulled in on Windows targets
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
] }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
