[package]
name = "winforge-plugin"
description = "Plugin SDK for WinForge — types and helpers for authoring plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
winforge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Required so plugins can implement the C ABI export macro
libc = "0.2"
